<resources>
    <string name="app_name">Ulti-Mate</string>

    <!--Menu Strings-->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_game_settings">Edit Game Settings</string>
    <string name="action_edit_field_setup">Change Field Setup</string>
    <string name="action_create_new_template">New Template</string>
    <string name="action_template_save_as">Save As Template</string>

    <!--Settings Strings-->
    <string name="title_pref_notifications">Notifications</string>

    <!--Common-->
    <string name="item_edit">Edit</string>
    <string name="item_delete">Delete</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="snackbar_undo">UNDO</string>
    <string name="dialog_confirm_read">Got it</string>
    <string name="error_text_empty">%1$s is a required field.</string>
    <string name="time_basic_hhmm_a">00:00 AM</string>
    <string name="time_basic_h_m_s">%1$s : %2$s : %3$s</string>

    <!--Main Menu Activity Strings-->
    <string name="resume_button">Resume</string>
    <string name="new_game_button">New Game</string>
    <string name="past_games_button">Past Games</string>

    <!--Game Display Fragment-->
    <string name="title_activity_game_display">Ulti-Mate</string>
    <string name="field_setup_button">Set Up Field</string>
    <string name="end_button">End Game</string>
    <string name="start_button">Start Game</string>
    <string name="start_resume_button">Resume Game</string>
    <string name="soft_cap_text">Soft cap:</string>
    <string name="hard_cap_text">Hard cap:</string>
    <string name="text_cap_time_spacer">-</string>
    <string name="soft_cap_timer_text">Time \'till Soft Cap:</string>
    <string name="hard_cap_timer_text">Time \'till Hard Cap:</string>
    <string name="time_remaining_text">Time remaining</string>
    <string name="default_status_text">Status:</string>
    <string name="default_game_status_text">- status goes here -</string>

    <!--Game Display Edit Fragment-->
    <string name="team_1_hint_text">Team 1</string>
    <string name="team_2_hint_text">Team 2</string>
    <string name="game_title_hint_text">Game Title</string>
    <string name="edit_button_text">Edit Game</string>
    <string name="save_button_text">Save Game</string>
    <string name="default_game_length_text">Length:</string>
    <string name="game_length_text">- time goes here -</string>
    <string name="text_game_in_progress">Game in progress</string>
    <string name="text_invalid_dates">&lt; Invalid &gt;</string>
    <string name="text_minute_full_plural">minutes</string>
    <string name="text_day_abbv_plural"> days</string>
    <string name="text_day_abbv_singular"> day</string>
    <string name="text_hour_abbv_plural"> hrs</string>
    <string name="text_hour_abbv_singular"> hr</string>
    <string name="text_minute_abbv_plural"> mins</string>
    <string name="text_minute_abbv_singular"> min</string>

    <!--Game Statuses-->
    <string name="status_not_started">Game Not Started</string>
    <string name="status_first_half">First Half</string>
    <string name="status_halftime">Halftime!</string>
    <string name="status_second_half">Second Half</string>
    <string name="status_soft_cap">Soft Cap Hit!</string>
    <string name="status_hard_cap">Hard Cap Hit!</string>
    <string name="status_game_over">Game Over</string>
    <string name="status_in_progress">Game In Progress</string>

    <!--New Game Activity-->
    <string name="title_activity_new_game">Templates</string>
    <string name="button_create_without_template">Start without Template</string>
    <string name="item_edit_template">Edit Template</string>
    <string name="item_delete_template">Delete Template</string>
    <string name="dialog_delete_template">Are you sure you want to delete this game?</string>
    <string name="instructions_template">Quickly make games in the future by creating a template.
        Press the + button above to create a new template.
        \n\nYou can also create a game without a template by pressing the button below.</string>

    <!--Game Setup Activity-->
    <string name="title_activity_game_setup">Setup</string>
    <string name="button_create_game">Create Game</string>
    <string name="button_update_game">Update Game</string>
    <string name="button_cap_default_text">Set Time</string>
    <string name="button_create_template">Create Template</string>
    <string name="button_update_template">Save Template</string>
    <string name="title_team_setup">Team Setup</string>
    <string name="title_game_setup">Game Setup</string>
    <string name="title_field_setup">Field Setup</string>
    <string name="dialog_name_template">Template Name</string>
    <string name="dialog_validation_failed">Please enter all required fields</string>
    <string name="description_winning_score">Game to %1$d</string>
    <string name="description_no_winning_score">No score limit</string>
    <string name="description_no_time_caps">No time caps</string>
    <string name="description_soft_cap">Soft Cap: %1$s</string>
    <string name="description_hard_cap">Hard Cap: %1$s</string>
    <!--Game Setup-->
    <string name="hint_game_name">Game Name</string>
    <string name="label_winning_score">Winning Score</string>
    <string name="hint_winning_score">13</string>
    <string name="time_caps">Time caps</string>
    <string name="soft_cap">Soft cap</string>
    <string name="hard_cap">Hard cap</string>
    <string name="button_set_time">Set Time</string>
    <string name="snackbar_message_time_cap">Time until %1$s cap: %2$s</string>
    <string name="snackbar_template_save_successful">Saved template %1$s.</string>
    <string name="timepicker_soft_cap_title">Set Soft Cap</string>
    <string name="timepicker_hard_cap_title">Set Hard Cap</string>
    <string name="dialog_cap_validation">Soft cap time must come before Hard cap time.</string>
    <!--Team Setup-->
    <string name="team_1_name_hint">Team 1</string>
    <string name="team_2_name_hint">Team 2</string>
    <string name="dialog_color_picker">Pick a team color</string>
    <string name="title_dialog_name_template">Create Template</string>
    <!--Field Setup-->
    <string name="dialog_init_pulling_team">"Which team pulls first?"</string>
    <string name="dialog_left_team">Which side is %1$s on?</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="question_left_team">Which team is on the left?</string>
    <string name="question_pulling_team">Which team is pulling this point?</string>
    <string name="question_init_pulling_team">Which team pulled first?</string>


    <!--Game Defaults-->
    <string name="default_game_name">Ultimate!</string>
    <string name="default_team_1_name">Home</string>
    <string name="default_team_2_name">Away</string>
    <string name="default_template_name">My Template</string>

    <!--My Games Activity-->
    <string name="title_activity_my_games">My Games</string>
    <string name="dialog_title_confirm_delete">Confirm Delete</string>
    <string name="dialog_delete_game">Are you sure you want to delete this game?</string>
    <string name="score_list_text">%1$d - %2$d</string>
    <string name="team_list_text">%1$s vs %2$s</string>

    <!--date / time dialog fragment-->
    <string name="text_start_title">Start</string>
    <string name="text_end_title">End</string>
    <string name="text_time">time:</string>
    <string name="text_date">date:</string>
    <string name="text_time_default"><u>0:00</u></string>
    <string name="text_date_default"><u>Month day, Year</u></string>
    <string name="text_dialog_fragment_title">Set Game Start and End Times</string>
    <string name="text_dialog_fragment_default_title">Title Goes Here</string>
    <string name="text_positive_action">Save</string>
    <string name="text_negative_action">Cancel</string>

    <!--Notification Strings-->
    <string name="notific_message_time_cap_hit">Time Cap Hit</string>
    <string name="notific_message_soft_cap_hit">Soft Cap Time Hit</string>
    <string name="notific_message_hard_cap_hit">Hard Cap Time Hit</string>
    <string name="notific_message_alert_time_cap_hit">Time Cap Hit</string>
    <string name="notific_message_text_game_hint">Click To Return To Game</string>
    <string name="notific_message_halftime_title">Halftime Score: %1$s - %2$s</string>
    <string name="notific_message_halftime_text">%1$s vs %2$s</string>
    <string name="notific_message_halftime_alert">Halftime!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
