<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.scoober.ulti.ulti_mate.GameDisplayActivity">
    <item
        android:id="@+id/action_game_settings"
        android:orderInCategory="99"
        android:title="@string/action_game_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_field_setup"
        android:orderInCategory="100"
        android:title="@string/action_edit_field_setup"
        android:enabled="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="10"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom" />
</menu>
