<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenuFragment"
    tools:showIn="@layout/activity_main_menu">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_menu_spacing"
        android:id="@+id/resumeButton"
        android:text="@string/resume_button"
        android:layout_gravity="center"
        android:enabled="false" />

    <View
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/vertical_menu_spacing"
        android:background="#000000"
        android:layout_gravity="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_menu_spacing"
        android:id="@+id/new_game_button"
        android:text="@string/new_game_button"
        android:layout_gravity="center" />

    <View
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/vertical_menu_spacing"
        android:background="#000000"
        android:layout_gravity="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_menu_spacing"
        android:id="@+id/past_games_button"
        android:text="@string/past_games_button"
        android:layout_gravity="center"
        android:enabled="false" />

</LinearLayout>
