<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSetupActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/gameDetailSetupCoordinatorLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_game_setup"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />
        <View
            android:layout_width="20dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/vertical_menu_spacing"
            android:layout_marginBottom="@dimen/vertical_menu_spacing"
            android:background="#000000"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_game_name"
            android:text="@string/default_game_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:id="@+id/gameTitleEditor"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/winningScore"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:ellipsize="end"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_winning_score"
                android:id="@+id/winningScoreLabel" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:inputType="number"
                android:maxLength="2"
                android:hint="@string/hint_winning_score"
                android:selectAllOnFocus="true"
                android:id="@+id/winningScore"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/timeCapsCheckbox"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:ellipsize="end"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/time_caps"
                android:id="@+id/timeCapsLabel" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/timeCapsCheckbox" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeCapsContainer"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/softCapContainer">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/softCapInput"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/soft_cap"
                    android:id="@+id/softCapLabel" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/softCapInput"
                    android:text="@string/button_set_time" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hardCapContainer"
                android:layout_below="@+id/softCapContainer">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/hardCapInput"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hard_cap"
                    android:id="@+id/hardCapLabel" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/hardCapInput"
                    android:text="@string/button_set_time" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/completeSetupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check_white_24dp" />

</android.support.design.widget.CoordinatorLayout>
