<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <!--Icon-->
        <ImageView
            android:id="@+id/timeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="20dp"
            android:src="@drawable/ic_watch_white_24dp"/>

        <TextView
            android:id="@+id/dialogFragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dialog_fragment_default_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textIsSelectable="false"
            android:textColor="#ffffff"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/startContentBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleBar">

        <!--Title for Start details-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_start_title"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/textStart"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:textColor="#000000" />

        <!--Start time text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"
            android:padding="10dp"
            android:layout_marginStart="60dp"
            android:id="@+id/textStartTime"
            android:layout_below="@+id/textStart"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:textColor="#000000"/>

        <!--Start time input-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time_default"
            android:padding="10dp"
            android:id="@+id/editStartTime"
            android:inputType="time"
            android:layout_toEndOf="@id/textStartTime"
            android:layout_alignTop="@id/textStartTime"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:clickable="true"
            android:textColor="#000000"/>

        <!--Start date text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textStartTime"
            android:layout_alignStart="@+id/textStartTime"
            android:text="@string/text_date"
            android:padding="10dp"
            android:id="@+id/textStartDate"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:textColor="#000000"/>

        <!--Start date input-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date_default"
            android:padding="10dp"
            android:id="@+id/editStartDate"
            android:inputType="date"
            android:layout_alignStart="@id/editStartTime"
            android:layout_alignTop="@id/textStartDate"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:clickable="true"
            android:textColor="#000000"/>

    </RelativeLayout>

    <!--Divider-->
    <View
        android:id="@+id/middleDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="20dp"
        android:layout_below="@+id/startContentBar"/>

    <RelativeLayout
        android:id="@+id/endContentBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middleDivider">

        <!--Title for End details-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_end_title"
            android:padding="10dp"
            android:id="@+id/textEnd"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:textColor="#000000"/>

        <!--End time text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"
            android:padding="10dp"
            android:layout_marginLeft="60dp"
            android:id="@+id/textEndTime"
            android:layout_below="@+id/textEnd"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:textColor="#000000"/>

        <!--End time input-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time_default"
            android:padding="10dp"
            android:id="@+id/editEndTime"
            android:inputType="time"
            android:layout_toEndOf="@id/textEndTime"
            android:layout_alignTop="@id/textEndTime"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:clickable="true"
            android:textColor="#000000"/>

        <!--End date text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textEndTime"
            android:layout_alignStart="@+id/textEndTime"
            android:text="@string/text_date"
            android:padding="10dp"
            android:id="@+id/textEndDate"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:textColor="#000000"/>

        <!--End date input-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date_default"
            android:padding="10dp"
            android:id="@+id/editEndDate"
            android:inputType="date"
            android:layout_alignStart="@id/editEndTime"
            android:layout_alignTop="@id/textEndDate"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:clickable="true"
            android:textColor="#000000"/>

    </RelativeLayout>

    <!--Cancel / OK Buttons-->
    <LinearLayout
        android:id="@+id/bottomButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/negativeButton"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/text_negative_action"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:textAlignment="center"
            android:clickable="true"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/positiveButton"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/text_positive_action"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:clickable="true"
            android:textColor="@android:color/white"
            android:textAlignment="center"/>

    </LinearLayout>

</RelativeLayout>